Fix alignment of source citation when it's the only item in a heading

--- a/html/src/style.css
+++ b/html/src/style.css
@@ -83,6 +83,10 @@ article {
   align-items: center;
 }
 
+.heading > .source:only-child {
+  margin-left: auto;
+}
+
 /* Responsive Prayers */
 .responsive-prayer.preces .line {
   display: table-row;
